added slidebar to change tension of curve

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -371,6 +371,7 @@
         [timeline]="timeline"
         [showGridLines]="showGridLines"
         [curve]="curve"
+        [tension]="tension"
         [rangeFillOpacity]="rangeFillOpacity"
         [roundDomains]="roundDomains"
         [tooltipDisabled]="tooltipDisabled"
@@ -595,6 +596,7 @@
         [noBarWhenZero]="noBarWhenZero"
         [wrapTicks]="wrapTicks"
         [curve]="curve"
+        [tension]="tension"
         (select)="onSelect($event)"
       >
       </combo-chart-component>
@@ -1434,6 +1436,11 @@
               {{ interpolationType }}
             </option>
           </select>
+          <div *ngIf="isTensionSliderRequired(curveType)">
+            <label for="tensionSlider">Degree of Curvature:</label>
+            <input id="tensionSlider" type="range" min="0" max="1" step="0.01" [(ngModel)]="tension">
+            <span>{{ tension }}</span>
+          </div>
         </div>
         <div *ngIf="chart.options.includes('curveClosed')">
           <label>Line Interpolation</label>
