--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -77,6 +77,7 @@
           [activeEntries]="activeEntries"
           [scaleType]="scaleType"
           [curve]="curve"
+          [tension]="tension"
           [rangeFillOpacity]="rangeFillOpacity"
           [animations]="animations"
         />
