--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1239,7 +1239,7 @@
         <strong>Color Scheme</strong>
       </h3>
       <select
-        [hidden]="!colorVisible || (useCustomColors && (schemeType === linearScaleType || chartType === 'heat-map' || chartType === 'calendar'))"
+        [hidden]="!colorVisible || (chart.options.includes('customColors') && useCustomColors && (schemeType === linearScaleType || chartType === 'heat-map' || chartType === 'calendar'))"
         style="margin-left: 10px"
         [ngModel]="selectedColorScheme"
         (ngModelChange)="setColorScheme($event)"
@@ -1266,7 +1266,7 @@
           </label>
           <br />
         </div>
-        <div *ngIf="useCustomColors && (schemeType === linearScaleType || chartType === 'heat-map' || chartType === 'calendar')">
+        <div *ngIf="chart.options.includes('customColors') && useCustomColors && (schemeType === linearScaleType || chartType === 'heat-map' || chartType === 'calendar')">
           <label>Gradient Color Stops:</label><input type="text" [(ngModel)]="gradientStops" (ngModelChange)="setCustomColor()"/>
         </div>
       </div>
