Add Sankey diagram

--- a/projects/swimlane/ngx-charts/src/lib/common/base-chart.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/base-chart.component.scss
@@ -21,6 +21,8 @@
   .circle,
   .cell,
   .bar,
+  .node,
+  .link,
   .arc {
     cursor: pointer;
   }
@@ -28,6 +30,8 @@
   .bar,
   .cell,
   .arc,
+  .node,
+  .link,
   .card {
     &.active,
     &:hover {
