Add one month heat calendar chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -627,6 +627,37 @@
         (deactivate)="deactivate($event)"
       >
       </ngx-charts-heat-map>
+      <ngx-charts-calendar-pie
+        *ngIf="chartType === 'calendar-pie'"
+        class="chart-container"
+        [min]="heatmapMin"
+        [max]="heatmapMax"
+        [view]="view"
+        [scheme]="colorScheme"
+        [calendarData]="calendarChartData"
+        [animations]="animations"
+        [legend]="showLegend"
+        [gradient]="gradient"
+        [xAxis]="showXAxis"
+        [yAxis]="showYAxis"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [innerPadding]="innerPadding"
+        [tooltipDisabled]="tooltipDisabled"
+        [trimXAxisTicks]="trimXAxisTicks"
+        [trimYAxisTicks]="trimYAxisTicks"
+        [rotateXAxisTicks]="rotateXAxisTicks"
+        [maxXAxisTickLength]="maxXAxisTickLength"
+        [maxYAxisTickLength]="maxYAxisTickLength"
+        [wrapTicks]="wrapTicks"
+        [month]="calendarMonth"
+        [year]="calendarYear"
+        (select)="select($event)"
+        (deactivate)="deactivate($event)"
+      >
+      </ngx-charts-calendar-pie>
       <ngx-charts-heat-map
         *ngIf="chartType === 'calendar'"
         class="chart-container"
