--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -597,6 +597,35 @@
         (select)="onSelect($event)"
       >
       </combo-chart-component>
+      <div *ngIf="chartType === 'combo-chart-line-pie-component'">
+        <combo-chart-line-pie-component
+            class="chart-container"
+            [view]="view"
+            [scheme]="comboBarScheme"
+            [colorSchemeLine]="lineChartScheme"
+            [results]="barChart"
+            [animations]="animations"
+            [lineChart]="lineChartSeries"
+            [tooltipDisabled]="tooltipDisabled"
+            [yAxisTickFormatting]="yLeftTickFormat"
+            [yLeftAxisScaleFactor]="yLeftAxisScale"
+            [gradient]="gradient"
+            [xAxis]="showXAxis"
+            [yAxis]="showYAxis"
+            [legend]="showLegend"
+            [legendTitle]="legendTitle"
+            [legendPosition]="legendPosition"
+            [showGridLines]="showGridLines"
+            [showXAxisLabel]="showXAxisLabel"
+            [showYAxisLabel]="showYAxisLabel"
+            [showRightYAxisLabel]="showYAxisLabel"
+            [xAxisLabel]="xAxisLabel"
+            [yAxisLabel]="yAxisLabel"
+            [wrapTicks]="wrapTicks"
+        >
+        </combo-chart-line-pie-component>
+      </div>
+
       <ngx-charts-heat-map
         *ngIf="chartType === 'heat-map'"
         class="chart-container"
@@ -1142,6 +1171,7 @@
         <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'linePieCombo'">{{ lineChartSeries | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{ timelineFilterBarData | json }}</pre>
         <div>
           <label>
