--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -598,32 +598,70 @@
       >
       </combo-chart-component>
       <div *ngIf="chartType === 'combo-chart-line-pie-component'">
-        <combo-chart-line-pie-component
+        <div class = "top-chart">
+          <ngx-charts-pie-chart
             class="chart-container"
             [view]="view"
-            [scheme]="comboBarScheme"
-            [colorSchemeLine]="lineChartScheme"
-            [results]="barChart"
+            [scheme]="colorScheme"
+            [results]="pieTempData"
             [animations]="animations"
-            [lineChart]="lineChartSeries"
-            [tooltipDisabled]="tooltipDisabled"
-            [yAxisTickFormatting]="yLeftTickFormat"
-            [yLeftAxisScaleFactor]="yLeftAxisScale"
+            [explodeSlices]="explodeSlices"
+            [labels]="showLabels"
+            [doughnut]="doughnut"
+            [arcWidth]="arcWidth"
             [gradient]="gradient"
-            [xAxis]="showXAxis"
-            [yAxis]="showYAxis"
-            [legend]="showLegend"
-            [legendTitle]="legendTitle"
-            [legendPosition]="legendPosition"
-            [showGridLines]="showGridLines"
-            [showXAxisLabel]="showXAxisLabel"
-            [showYAxisLabel]="showYAxisLabel"
-            [showRightYAxisLabel]="showYAxisLabel"
-            [xAxisLabel]="xAxisLabel"
-            [yAxisLabel]="yAxisLabel"
-            [wrapTicks]="wrapTicks"
+            [tooltipDisabled]="tooltipDisabled"
+            [tooltipText]="pieTooltipText"
+            (dblclick)="dblclick($event)"
+            (select)="select($event)"
+            (activate)="activate($event)"
+            (deactivate)="deactivate($event)"
+          >
+          </ngx-charts-pie-chart>
+        </div>
+        <div class = "bottom-chart">
+          <ngx-charts-line-chart
+          [view]="view"
+          class="chart-container"
+          [scheme]="colorScheme"
+          [schemeType]="schemeType"
+          [results]="dateDataWithOrWithoutRange"
+          [animations]="animations"
+          [legend]="showLegend"
+          [legendTitle]="legendTitle"
+          [legendPosition]="legendPosition"
+          [gradient]="gradient"
+          [xAxis]="showXAxis"
+          [yAxis]="showYAxis"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel"
+          [autoScale]="autoScale"
+          [xScaleMin]="xScaleMin"
+          [xScaleMax]="xScaleMax"
+          [yScaleMin]="yScaleMin"
+          [yScaleMax]="yScaleMax"
+          [timeline]="timeline"
+          [showGridLines]="showGridLines"
+          [curve]="curve"
+          [rangeFillOpacity]="rangeFillOpacity"
+          [roundDomains]="roundDomains"
+          [tooltipDisabled]="tooltipDisabled"
+          [trimXAxisTicks]="trimXAxisTicks"
+          [trimYAxisTicks]="trimYAxisTicks"
+          [rotateXAxisTicks]="rotateXAxisTicks"
+          [maxXAxisTickLength]="maxXAxisTickLength"
+          [maxYAxisTickLength]="maxYAxisTickLength"
+          [wrapTicks]="wrapTicks"
+          (select)="select($event)"
+          (activate)="activate($event)"
+          (deactivate)="deactivate($event)"
+          (tooltipCurrent)="getTooltipCurrent($event)"
         >
-        </combo-chart-line-pie-component>
+        </ngx-charts-line-chart>
+        </div>
+
       </div>
 
       <ngx-charts-heat-map
