Fix layout and add pie chart data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -611,16 +611,12 @@
         [max]="heatmapMax"
         [view]="view"
         [scheme]="colorScheme"
-        [calendarData]="calendarChartData"
+        [calendarData]="calendarPieData"
         [animations]="animations"
         [legend]="showLegend"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
-        [showXAxisLabel]="showXAxisLabel"
-        [showYAxisLabel]="showYAxisLabel"
-        [xAxisLabel]="xAxisLabel"
-        [yAxisLabel]="yAxisLabel"
         [innerPadding]="innerPadding"
         [tooltipDisabled]="tooltipDisabled"
         [trimXAxisTicks]="trimXAxisTicks"
