--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -597,6 +597,7 @@
         (select)="onSelect($event)"
       >
       </combo-chart-component>
+
       <div *ngIf="chartType === 'combo-chart-line-pie-component'">
         <div class = "top-chart">
           <ngx-charts-pie-chart
@@ -650,7 +651,6 @@
           [tooltipDisabled]="tooltipDisabled"
           [trimXAxisTicks]="trimXAxisTicks"
           [trimYAxisTicks]="trimYAxisTicks"
-          [rotateXAxisTicks]="rotateXAxisTicks"
           [maxXAxisTickLength]="maxXAxisTickLength"
           [maxYAxisTickLength]="maxYAxisTickLength"
           [wrapTicks]="wrapTicks"
@@ -660,7 +660,7 @@
           (tooltipCurrent)="getTooltipCurrent($event)"
         >
         </ngx-charts-line-chart>
-        </div>
+      </div>
 
       </div>
 
@@ -1209,7 +1209,8 @@
         <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
-        <pre *ngIf="chart.inputFormat === 'linePieCombo'">{{ lineChartSeries | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'linePieCombo'">{{ pieTempData | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'linePieCombo'">{{ dateDataWithOrWithoutRange | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{ timelineFilterBarData | json }}</pre>
         <div>
           <label>
