Allow changes to dimensions of pie chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -607,28 +607,21 @@
       <ngx-charts-calendar-pie
         *ngIf="chartType === 'calendar-pie'"
         class="chart-container"
-        [min]="heatmapMin"
-        [max]="heatmapMax"
         [view]="view"
         [scheme]="colorScheme"
         [calendarData]="calendarPieData"
         [animations]="animations"
         [legend]="showLegend"
-        [gradient]="gradient"
         [xAxis]="showXAxis"
-        [yAxis]="showYAxis"
         [innerPadding]="innerPadding"
         [tooltipDisabled]="tooltipDisabled"
         [trimXAxisTicks]="trimXAxisTicks"
-        [trimYAxisTicks]="trimYAxisTicks"
         [rotateXAxisTicks]="rotateXAxisTicks"
         [maxXAxisTickLength]="maxXAxisTickLength"
-        [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
         [month]="calendarMonth"
         [year]="calendarYear"
-        [pieResults]="single"
-        [calendar]="true"
+        [customColors]="customColors"
         (select)="select($event)"
         (deactivate)="deactivate($event)"
       >
