Fix legend not changing positions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -635,6 +635,8 @@
         [results]="calendarPieData"
         [animations]="animations"
         [legend]="showLegend"
+        [legendTitle]="legendTitle"
+        [legendPosition]="legendPosition"
         [xAxis]="showXAxis"
         [innerPadding]="innerPadding"
         [tooltipDisabled]="tooltipDisabled"
