--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -332,7 +332,7 @@ main {
   }
 }
 
-.top-chart {
+.top-pie-chart {
   position: absolute;
   top: 30%;
   left: 50%;
@@ -340,7 +340,7 @@ main {
   transform: translate(-50%, -50%);
 }
 
-.bottom-chart {
+.bottom-line-chart {
   position: absolute;
   bottom: 30%;
   left: 50%;
