Rounding edges only when roundEdges prop is passed and bar values are positive. (#5)
* Only rounding if roundEdges is enabled and values are positive to avoid rounding bug.

---------

Co-authored-by: Rowan Puckeridge <rowan.puckeridge@okendo.io>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -175,6 +175,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
         [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
@@ -1055,6 +1056,7 @@
       [showGridLines]="showGridLines"
       [barPadding]="barPadding"
       [roundDomains]="roundDomains"
+      [roundEdges]="roundEdges"
       [noBarWhenZero]="noBarWhenZero"
       [yScaleMax]="yScaleMax"
       [showDataLabel]="showDataLabel"
