--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -946,13 +946,51 @@
         >
         </ngx-charts-bubble-chart-interactive>
       </div>
+      <ngx-charts-bubble-chart-2d
+      *ngIf="chartType === 'bubble-chart-2d'"
+      [view]="view"
+      class="chart-container"
+      [results]="bubble2d"
+      [animations]="animations"
+      [showGridLines]="showGridLines"
+      [legend]="showLegend"
+      [legendTitle]="legendTitle"
+      [legendPosition]="legendPosition"
+      [xAxis]="showXAxis"
+      [yAxis]="showYAxis"
+      [showXAxisLabel]="showXAxisLabel"
+      [showYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel"
+      [autoScale]="autoScale"
+      [xScaleMin]="xScaleMin"
+      [xScaleMax]="xScaleMax"
+      [yScaleMin]="yScaleMin"
+      [yScaleMax]="yScaleMax"
+      [scheme]="colorScheme"
+      [schemeType]="schemeType"
+      [roundDomains]="roundDomains"
+      [tooltipDisabled]="tooltipDisabled"
+      [minRadius]="minRadius"
+      [maxRadius]="maxRadius"
+      [trimXAxisTicks]="trimXAxisTicks"
+      [trimYAxisTicks]="trimYAxisTicks"
+      [rotateXAxisTicks]="rotateXAxisTicks"
+      [maxXAxisTickLength]="maxXAxisTickLength"
+      [maxYAxisTickLength]="maxYAxisTickLength"
+      [wrapTicks]="wrapTicks"
+      (activate)="activate($event)"
+      (deactivate)="deactivate($event)"
+      (select)="select($event)"
+    >
+    </ngx-charts-bubble-chart-2d>
       <ngx-charts-line-chart
         *ngIf="chartType === 'line-reference-lines'"
         [view]="view"
         class="chart-container"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
-        [results]="multi"
+        [results]="single"
         [animations]="animations"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
@@ -1156,6 +1194,7 @@
         <pre *ngIf="chart.inputFormat === 'boxMultiSeries'">{{ boxData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'bubble'">{{ bubble | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'bubble2d'">{{ bubble2d | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{ timelineFilterBarData | json }}</pre>
