Add timeline filter for timeline standard and stacked charts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -450,6 +450,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timelineFilter]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -478,6 +479,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [roundEdges]="roundEdges"
         [xScaleMax]="xScaleMax"
         [noBarWhenZero]="noBarWhenZero"
         [trimXAxisTicks]="trimXAxisTicks"
@@ -486,6 +488,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timelineFilter]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
