fixed wrong changes in reference line

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -990,7 +990,7 @@
         class="chart-container"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
-        [results]="single"
+        [results]="multi"
         [animations]="animations"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
