Added yScaleMin to bar-vertical-stacked component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,6 +176,7 @@
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
+        [yScaleMin]="yScaleMin"
         [yScaleMax]="yScaleMax"
         [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
@@ -1058,6 +1059,7 @@
       [roundDomains]="roundDomains"
       [roundEdges]="roundEdges"
       [noBarWhenZero]="noBarWhenZero"
+      [yScaleMin]="yScaleMin"
       [yScaleMax]="yScaleMax"
       [showDataLabel]="showDataLabel"
       [trimXAxisTicks]="trimXAxisTicks"
