fixed style issue according to comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -488,7 +488,8 @@
         [showGridLines]="showGridLines"
         [roundDomains]="roundDomains"
         [curve]="curve"
-        [tooltipDisabled]="tooltipDisabled"        [referenceLines]="refLinesArea"
+        [tooltipDisabled]="tooltipDisabled"
+        [referenceLines]="refLinesArea"
         [showRefLines]="showRefLines"
         [showRefLabels]="showRefLabels"
         [trimXAxisTicks]="trimXAxisTicks"
