Add dropdown to demo page for choosing x-axis position

--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -17,6 +17,7 @@
       [showLabel]="showXAxisLabel"
       [labelText]="xAxisLabel"
       [tickFormatting]="xAxisTickFormatting"
+      [xOrient]="xOrient"
       [wrapTicks]="wrapTicks"
       (dimensionsChanged)="updateXAxisHeight($event)"
     ></svg:g>
