--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -622,6 +622,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [showDataLabel]="showDataLabel"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
