--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -305,6 +305,7 @@
         [explodeSlices]="explodeSlices"
         [labels]="showLabels"
         [doughnut]="doughnut"
+        [showDoughnutSum]="showDoughnutSum"
         [arcWidth]="arcWidth"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
@@ -1414,6 +1415,13 @@
           <label>
             <input type="checkbox" [(ngModel)]="doughnut" />
             Doughnut
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('showDoughnutSum')">
+          <label>
+            <input type="checkbox" [checked]="showDoughnutSum" (change)="showDoughnutSum = $event.target.checked" />
+            Show Doughnut Sum
           </label>
           <br />
         </div>
