added unit for total and total label for pie chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,6 +306,7 @@
         [labels]="showLabels"
         [doughnut]="doughnut"
         [showDoughnutSum]="showDoughnutSum"
+        [totalUnit]="'%'"
         [arcWidth]="arcWidth"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
