fix: query children animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -196,6 +196,7 @@
       <ngx-charts-bar-horizontal-stacked
         *ngIf="chartType === 'bar-horizontal-stacked'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -232,6 +233,7 @@
       <ngx-charts-bar-vertical-normalized
         *ngIf="chartType === 'bar-vertical-normalized'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -266,6 +268,7 @@
       <ngx-charts-bar-horizontal-normalized
         *ngIf="chartType === 'bar-horizontal-normalized'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -300,6 +303,7 @@
       <ngx-charts-pie-chart
         *ngIf="chartType === 'pie-chart'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [results]="single"
@@ -323,6 +327,7 @@
       <ngx-charts-advanced-pie-chart
         *ngIf="chartType === 'advanced-pie-chart'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [results]="single"
@@ -339,6 +344,7 @@
       <ngx-charts-pie-grid
         *ngIf="chartType === 'pie-grid'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [results]="single"
@@ -352,8 +358,9 @@
       </ngx-charts-pie-grid>
       <ngx-charts-line-chart
         *ngIf="chartType === 'line-chart'"
-        [view]="view"
         class="chart-container"
+        @queryChildAnimations
+        [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [results]="dateDataWithOrWithoutRange"
@@ -392,8 +399,9 @@
       </ngx-charts-line-chart>
       <ngx-charts-polar-chart
         *ngIf="chartType === 'polar-chart'"
-        [view]="view"
         class="chart-container"
+        @queryChildAnimations
+        [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [results]="multi"
@@ -424,8 +432,9 @@
       </ngx-charts-polar-chart>
       <ngx-charts-bubble-chart
         *ngIf="chartType === 'bubble-chart'"
-        [view]="view"
         class="chart-container"
+        @queryChildAnimations
+        [view]="view"
         [results]="bubble"
         [animations]="animations"
         [showGridLines]="showGridLines"
@@ -463,6 +472,7 @@
       <ngx-charts-area-chart
         *ngIf="chartType === 'area-chart'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -502,6 +512,7 @@
       <ngx-charts-area-chart-stacked
         *ngIf="chartType === 'area-chart-stacked'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -540,6 +551,7 @@
       <ngx-charts-area-chart-normalized
         *ngIf="chartType === 'area-chart-normalized'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
@@ -573,6 +585,7 @@
       <combo-chart-component
         *ngIf="chartType === 'combo-chart'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="comboBarScheme"
         [colorSchemeLine]="lineChartScheme"
@@ -605,6 +618,7 @@
       <ngx-charts-heat-map
         *ngIf="chartType === 'heat-map'"
         class="chart-container"
+        @queryChildAnimations
         [min]="heatmapMin"
         [max]="heatmapMax"
         [view]="view"
@@ -635,6 +649,7 @@
       <ngx-charts-heat-map
         *ngIf="chartType === 'calendar'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [results]="calendarData"
@@ -663,6 +678,7 @@
       <ngx-charts-tree-map
         *ngIf="chartType === 'tree-map'"
         class="chart-container"
+        @queryChildAnimations
         [view]="view"
         [scheme]="colorScheme"
         [results]="single"
