--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -79,6 +79,7 @@
           [curve]="curve"
           [rangeFillOpacity]="rangeFillOpacity"
           [animations]="animations"
+          [style]="{ 'stroke-dasharray': '5,5' }"
         />
       </svg:g>
 
