--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-chart
   [view]="[width + legendSpacing, height]"
   [showLegend]="legend"
-  [legendOptions]="legendOptions"
+[legendOptions]="legendOptions"
   [activeEntries]="activeEntries"
   [animations]="animations"
   (legendLabelClick)="onClick($event)"
@@ -79,7 +79,7 @@
           [curve]="curve"
           [rangeFillOpacity]="rangeFillOpacity"
           [animations]="animations"
-          [style]="{ 'stroke-dasharray': '5,5' }"
+          [style]="getLineStyle()"
         />
       </svg:g>
 
